--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html> 
 <html> 
   <head> 
     <meta charset='UTF-8'> 
-    <title>ISB AdminNews</title> 
+    <title>Ilmajoen Salibandy/title> 
     <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
     
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
