--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html> 
   <head> 
     <meta charset='UTF-8'> 
-    <title>Ilmajoen Salibandy/title> 
+    <title>Ilmajoen Salibandy</title> 
     <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
     
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
