Autocomplete feature for member questions in back-end.

--- a/spec/javascripts/fixtures/QAItemHandler/container-with-items.html
+++ b/spec/javascripts/fixtures/QAItemHandler/container-with-items.html
@@ -1,7 +1,7 @@
 <div id="questions">
   <fieldset class="inputs">
     <ol>
-      <li class="string required" id="member_questions_attributes_0_content_input"><label for="member_questions_attributes_0_content">Kysymys<abbr title="required">*</abbr></label><input id="member_questions_attributes_0_content" maxlength="255" name="member[questions_attributes][0][content]" type="text" value="Hetkonen?" /></li>
+      <li class="string required" id="member_questions_attributes_0_content_input"><label for="member_questions_attributes_0_content">Kysymys<abbr title="required">*</abbr></label><input id="member_questions_attributes_0_content" class="question" maxlength="255" name="member[questions_attributes][0][content]" type="text" value="Hetkonen?" /></li>
       <li class="string required" id="member_questions_attributes_0_answer_input"><label for="member_questions_attributes_0_answer">Vastaus<abbr title="required">*</abbr></label><input id="member_questions_attributes_0_answer" maxlength="255" name="member[questions_attributes][0][answer]" type="text" value="Ei käy." /></li>
     </ol>
   </fieldset>
@@ -9,7 +9,7 @@
   
   <fieldset class="inputs">
     <ol>
-      <li class="string required" id="member_questions_attributes_1_content_input"><label for="member_questions_attributes_1_content">Kysymys<abbr title="required">*</abbr></label><input id="member_questions_attributes_1_content" maxlength="255" name="member[questions_attributes][1][content]" type="text" value="Hetkonen?" /></li>
+      <li class="string required" id="member_questions_attributes_1_content_input"><label for="member_questions_attributes_1_content">Kysymys<abbr title="required">*</abbr></label><input id="member_questions_attributes_1_content" class="question" maxlength="255" name="member[questions_attributes][1][content]" type="text" value="Hetkonen?" /></li>
       <li class="string required" id="member_questions_attributes_1_answer_input"><label for="member_questions_attributes_1_answer">Vastaus<abbr title="required">*</abbr></label><input id="member_questions_attributes_1_answer" maxlength="255" name="member[questions_attributes][1][answer]" type="text" value="Ei käy." /></li>
     </ol>
   </fieldset>
