--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Hakemaasi sivua ei löytynyt - Ilmajoen Salibandy</title>
+  <meta charset='UTF-8'>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body { background-color: #f7f8fb; color: #666; font-family: arial, sans-serif; }
     div.dialog {
       width: 25em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
+      border:1px solid #e1e1e2;
+      background-color: #ffffff;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 {
+      font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
+      font-size: 3em;
+      line-height: 1.5em;
+    }
   </style>
+  <link href="http://fonts.googleapis.com/css?family=Molengo" media="screen" rel="stylesheet" type="text/css" /> 
+  <link href="/stylesheets/style.css?v=2" media="screen" rel="stylesheet" type="text/css" /> 
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Pallo hukassa?</h1>
+    <p>Hakemaasi sivua ei löytynyt. Koita palata <a href="/">etusivulle</a>.</p>
   </div>
 </body>
 </html>
